--- a/screwdriver.yaml
+++ b/screwdriver.yaml
@@ -1,1 +1,15 @@
-
+shared:
+    image: node:20
+jobs:
+    first:
+        requires: sd@12907:first
+        steps: 
+            - echo: echo first
+    second:
+        requires: sd@12907:first
+        steps:
+            - echo: echo second
+    third:
+        requires: sd@12907:first
+        steps:
+            - echo: echo third
