--- a/screwdriver.yaml
+++ b/screwdriver.yaml
@@ -2,14 +2,14 @@ shared:
     image: node:20
 jobs:
     first:
-        requires: sd@12907:first
+        requires: ~sd@12907:first
         steps: 
             - echo: echo first
     second:
-        requires: sd@12907:first
+        requires: ~sd@12907:first
         steps:
             - echo: echo second
     third:
-        requires: sd@12907:first
+        requires: ~sd@12907:first
         steps:
             - echo: echo third
